@@ -7,6 +7,10 @@ ubiquity (2.15.23) UNRELEASED; urgency=low
     working internet connection and the user is signing up for U1. This
     also resolves ubiquity failing to load when booting direct live user
     session. (LP: #1226912)
+  * Instead of skipping u1 plugin when offline, display "No internet
+    connectivity" page and show the login later button. Thus avoiding
+    hanging when installing fully offline, and explaining why U1 login was
+    not available. (LP: #1237694)
 
  -- Dmitrijs Ledkovs <dmitrij.ledkov@ubuntu.com>  Fri, 11 Oct 2013 10:12:57 +0100
 
